--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "eslint .",
-    "start": "next start"
+    "start": "next start",
+    "test:api": "node --experimental-fetch scripts/test-api.js",
+    "test:imap": "node --experimental-fetch scripts/test-imap.js",
+    "test:fetch": "node --experimental-fetch scripts/test-fetch.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -61,7 +64,10 @@
     "use-sync-external-store": "latest",
     "vaul": "^1.1.2",
     "zod": "3.25.76",
-    "zustand": "latest"
+    "zustand": "latest",
+    "nodemailer": "^6.9.4",
+    "imapflow": "*",
+    "mailparser": "^3.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
