--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "use-sync-external-store": "latest",
     "vaul": "^1.1.2",
     "zod": "3.25.76",
-    "zustand": "latest"
+    "zustand": "latest",
+    "nodemailer": "^6.9.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
