--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "imapflow": "^1.2.3",
     "immer": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "16.0.3",
+    "mailparser": "^3.9.1",
+    "next": "^16.1.1",
     "next-themes": "latest",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
@@ -64,18 +66,12 @@
     "use-sync-external-store": "latest",
     "vaul": "^1.1.2",
     "zod": "3.25.76",
-    "zustand": "latest",
-<<<<<<< HEAD
-    "nodemailer": "^6.9.4"
-=======
-    "nodemailer": "^6.9.4",
-    "imapflow": "*",
-    "mailparser": "^3.6.0"
->>>>>>> bd64b8e81b6a9b42e879826d71617fabd0515931
+    "zustand": "latest"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
-    "@types/node": "^22",
+    "@types/mailparser": "^3.4.6",
+    "@types/node": "^22.19.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
